// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test generator cases test getMWACases 1`] = `
Array [
  Object {
    "language": "js",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  Object {
    "language": "js",
    "packageManager": "npm",
    "solution": "mwa",
  },
  Object {
    "language": "ts",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  Object {
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  Object {
    "language": "js",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  Object {
    "language": "ts",
    "packageManager": "npm",
    "solution": "mwa",
  },
]
`;

exports[`test generator cases test getModuleCases 1`] = `
Array [
  Object {
    "language": "js",
    "packageManager": "yarn",
    "solution": "module",
  },
  Object {
    "language": "js",
    "packageManager": "npm",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageManager": "yarn",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "module",
  },
  Object {
    "language": "js",
    "packageManager": "pnpm",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageManager": "npm",
    "solution": "module",
  },
]
`;

exports[`test generator cases test getModuleNewCases 1`] = `
Array [
  Object {
    "actionType": "function",
    "function": "tailwindcss",
  },
  Object {
    "actionType": "function",
    "function": "storybook",
  },
  Object {
    "actionType": "function",
    "function": "runtimeApi",
  },
]
`;

exports[`test generator cases test getMonorepoCases 1`] = `
Array [
  Object {
    "packageManager": "pnpm",
    "solution": "monorepo",
  },
  Object {
    "packageManager": "yarn",
    "solution": "monorepo",
  },
]
`;

exports[`test generator cases test getMonorepoNewCases 1`] = `
Array [
  Object {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "mwa",
  },
  Object {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "mwa",
  },
  Object {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "mwa_test",
  },
  Object {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "mwa_test",
  },
  Object {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "module",
  },
  Object {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "inner_module",
  },
  Object {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "inner_module",
  },
]
`;
